# ShieldAI

./: .env.example  .gitignore  LICENSE  README.md  config.py  pyproject.toml  scoring_guide.md
.github/workflows/: ci.yml
data/cetp/: priya_cetp_i.csv
docs/: INNOVATION.md  LAUNCH_PLAN.md  MARKET.md
src/: aggregate.py  alert.py  constants.py  detection.py  instrumentation.py  multivariate.py  run_anticheat.py  zscore.py
tests/: test_zscore.py
